--- a/slides.html
+++ b/slides.html
@@ -488,9 +488,9 @@
 <h1>Outline</h1>
 <ol type="1">
 <li class="fragment">Setup</li>
+<li class="fragment">Introduction to R</li>
 <li class="fragment">Introduction to DHS survey data</li>
 <li class="fragment">Work with DHS GPS coordinates</li>
-<li class="fragment">Visualize spatial data</li>
 <li class="fragment">Work with CHIRTS temperature data</li>
 <li class="fragment">Aggregate spatial data</li>
 <li class="fragment">Link climate data and DHS surveys</li>
@@ -3314,23 +3314,8 @@
 
 </section>
 
-<section id="multilevel-modeling" class="title-slide slide level1 center">
-<h1>8. Multilevel modeling</h1>
-<p>This and beyond is going to come from Kat/Becca</p>
-</section>
-
-<section id="r-demo-8" class="title-slide slide level1 center">
-<h1>R demo</h1>
-<p>Building a model 📈</p>
-</section>
-
-<section id="questions-9" class="title-slide slide level1 center">
-<h1>Questions?</h1>
-
-</section>
-
-<section id="thank-you-acknowledgemnts" class="title-slide slide level1 center">
-<h1>Thank you + acknowledgemnts</h1>
+<section id="multilevel-modeling-is-next" class="title-slide slide level1 center">
+<h1>8. Multilevel modeling is next!</h1>
 <div class="quarto-auto-generated-content">
 <p><img src="images/dhs_logo_navy.png" class="slide-logo"></p>
 <div class="footer footer-default">
